# paimon-cpp-apache

./: .asf.yaml  .clang-format  .clang-tidy  .cmake-format.py  .codespell_ignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.devcontainer/: Dockerfile.template  devcontainer.json.template
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  feature.yaml
build_support/: asan-suppressions.txt  get-upstream-commit.sh  lint_exclusions.txt  lintutils.py  run-test.sh  run_clang_tidy.py
build_support/iwyu/: iwyu-filter.awk  iwyu.sh
build_support/iwyu/mappings/: arrow.imp  gmock.imp  gtest.imp  paimon-misc.imp
cmake_modules/: FindArrowAlt.cmake  FindAvroAlt.cmake  FindGTestAlt.cmake  FindLZ4Alt.cmake  FindORCAlt.cmake  FindPackageUtils.cmake  FindProtobufAlt.cmake  FindRE2Alt.cmake  FindRapidJSONAlt.cmake  FindSnappyAlt.cmake  FindTBBAlt.cmake  FindZLIBAlt.cmake  FindfmtAlt.cmake  FindglogAlt.cmake  FindzstdAlt.cmake  ThirdpartyToolchain.cmake  jieba.diff  orc.diff
docs/: Makefile  code-style.md  make.bat  requirements.txt
docs/source/: build_system.rst  building.rst  conf.py  index.rst
docs/source/api/: file_format.rst
docs/source/user_guide/: arrow.rst  clean.rst  commit.rst  data_types.rst  global_index.rst  prefetch.rst  schema.rst  write.rst
examples/: CMakeLists.txt
include/paimon/: commit_context.h  compare.h  defs.h  executor.h  file_store_commit.h  read_context.h  result.h  scan_context.h  status.h  string_builder.h  traits.h  type_fwd.h  visibility.h
include/paimon/factories/: factory.h  (+2 more)
src/paimon/: CMakeLists.txt
test/inte/: CMakeLists.txt  append_compaction_inte_test.cpp  data_evolution_table_test.cpp  global_index_test.cpp  pk_compaction_inte_test.cpp  read_inte_test.cpp  read_inte_with_index_test.cpp  scan_inte_test.cpp  write_and_read_inte_test.cpp
(+986 files in other folders)
